# moos-ivp-midca

./: .gitignore  CMakeLists.txt  README  README.md
lib/: libBHV_SimpleWaypoint.dylib
missions/agda/: experiment.sh  hazards6.txt  launch.sh  meta_enemy.moos  meta_fisher1.moos  meta_fisher2.moos  meta_fisher3.bhv  meta_fisher3.moos  meta_fisher4.bhv  meta_ship.moos  meta_ship4.moos  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pHelmIvP.moos  plug_pNodeReporter.moos  plug_prelocate.moos  plug_uFldHazardMgr.moos  plug_uFldNodeBroker.moos  pokedb.sh  results.txt  test.txt
missions/gatars/: experiment.sh  hazard_s1.txt  hazard_s2.txt  hazards3.txt  hazards5.txt  hazards6.txt  hazards_hack.txt  launch.sh  meta_enemy.moos  meta_fisher.moos  meta_fisher1.bhv  meta_fisher1.moos  meta_fisher2.bhv  meta_fisher2.moos  meta_fisher3.bhv  meta_fisher3.moos  meta_fisher4.bhv  meta_ship.bhv  meta_ship.moos  meta_ship1.bhv  meta_ship1.bhv~HEAD  meta_ship1.moos  meta_ship2.bhv  meta_ship2.moos  meta_ship3.bhv  meta_ship3.moos  meta_ship4.bhv  meta_ship4.moos  meta_ship5.moos  meta_ship6.bhv  meta_ship6.moos  meta_ship7.bhv  meta_ship7.moos  meta_ship8.bhv  meta_ship8.moos  meta_ship9.moos  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  mines_circle.txt  (+40 more)
missions/gatars1/: hazards_hack.txt  launch.sh  meta_ship.bhv  meta_ship.moos  meta_shoreside.moos  mines_circle.txt  mines_circle1.txt  mines_line.txt  plug_pHostInfo.moos  plug_uFldHazardMgr.moos
missions/gatars2/: hazards1.txt  hazards_hack.txt  hazards_hackathon.txt  meta_ship9.bhv  mines_circle1.txt  mines_line.txt  plug_origin_warp.moos
missions/gatars3/: calculate_scores.py  hazards2.txt  hazards_hack.txt  meta_shoreside.moos  mines_circle.txt  plug_uFldNodeBroker.moos
missions/genios/: hazards5.txt  launch.sh  meta_ship9.moos  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_origin_warp.moos  plug_uFldNodeBroker.moos  plug_uSimMarine.moos  tags.txt  targ_Grace.moos  targ_shoreside.moos
missions/jake/: launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_midca.moos  plug_origin_warp.moos  plug_pHelmIvP.moos  plug_pMarinePID.moos  plug_pNodeReporter.moos  plug_uProcessWatch.moos  plug_uSimMarine.moos
missions/multi_agent/: hazards6.txt  launch.sh  meta_ship2.bhv  meta_shoreside.moos  meta_vehicle.moos  meta_vehicle0.moos  meta_vehicle1.moos  plug_origin_warp.moos  plug_pHelmIvP.moos  plug_pHostInfo.moos  plug_pMarinePID.moos  plug_pNodeReporter.moos  plug_pShare.moos  plug_prelocate.moos  plug_uFldNodeBroker.moos  plug_uProcessWatch.moos  plug_uSimMarine.moos  tags.txt  tags_old.txt  targ_Grace.moos  targ_franklin.moos  targ_remus.moos  targ_shoreside.moos
missions/multi_agent/results/: analyze.py  experiment.sh  grace.csv  grace_anomalies.csv  grace_goals.csv
missions/multi_agent/results/oldResultsSravya/: analysis.csv  grace.csv  graceOld.csv
missions/multi_agent/results/past_results/: grace.csv  grace_random_400.csv  grace_smart_400.csv  grace_smart_600.csv
missions/multi_agent/results/results/: Analasys.ipynb
missions/multi_agent/results/results/.ipynb_checkpoints/: Analasys-checkpoint.ipynb
missions/multi_agent/results/results/Remora_0.00005/: Untitled.ipynb  grace.csv  grace_anomalies.csv  grace_goals.csv
missions/multi_agent/results/results/Remora_smart_0.00005/: .~lock.grace_goals.csv#  grace.csv  grace_anomalies.csv  grace_goals.csv
missions/multi_agent/results/terminal_output/: midca.txt
missions/new/: hazards.txt  hazards5.txt  launch.sh  meta_ship.bhv  meta_ship.moos  meta_ship2.bhv  meta_ship4.bhv  meta_ship5.bhv  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uFldHazardMgr.moos  plug_uProcessWatch.moos  sam.txt  scores.csv  targ_Cruise.bhv  targ_Cruise.moos  targ_Cruise1.bhv  targ_Cruise1.moos  targ_Titanic.bhv  targ_Titanic.moos  targ_Titanic1.bhv  targ_Titanic1.moos  targ_remus.bhv  targ_remus.moos  targ_ship.moos  targ_ship1.bhv  targ_ship1.moos  targ_shoreside.moos
missions/remus/: README  hazards.txt  remus.bhv  remus.moos
missions/test/: hazards5.txt  hazards6.txt  launch.sh  meta_enemy.moos  meta_fisher1.moos  meta_fisher2.moos  meta_ship.moos  meta_ship1.moos  meta_ship2.moos  meta_ship3.moos  meta_ship4.bhv  meta_ship5.bhv  meta_ship5.moos  meta_ship6.moos  meta_ship7.moos  meta_ship8.moos  meta_shoreside.moos  meta_vehicle.moos  plug_origin_warp.moos  targ_CarlVinson.moos  targ_Chesapeake.moos  targ_CorpusChristi.moos  targ_Intrepid.moos  targ_Liberty.moos  targ_Ohio.bhv  targ_Ohio.moos  targ_Patriot.moos  targ_Pittsburgh.moos  targ_Titanic.moos  targ_alaska.moos  targ_fisher1.moos  targ_fisher2.moos  targ_fisher3.moos  targ_fisher4.moos  targ_remus.moos  targ_shoreside.moos
scripts/: mykill
src/: CMakeLists.txt
src/ploc/: CMakeLists.txt  loc.cpp  loc.h  loc_Info.cpp  loc_Info.h  main.cpp  ploc.moos
src/pmidca/: CMakeLists.txt  cellfinder.py  main.cpp  midca.cpp  midca.h  midca_Info.cpp  midca_Info.h  pmidca.moos  test.py  world.py
src/pmidca/benigns/: tagworld.py
src/pmine_distributor/: CMakeLists.txt  main.cpp  mine_distributor.cpp  mine_distributor.h  mine_distributor_Info.cpp  mine_distributor_Info.h  pmine_distributor.moos
src/pmine_layer/: CMakeLists.txt  main.cpp  mine_layer.cpp  mine_layer.h  mine_layer_Info.cpp  mine_layer_Info.h  pmine_layer.moos
src/ppause_vessels/: CMakeLists.txt  main.cpp  pause_vessels.cpp  pause_vessels.h  pause_vessels_Info.cpp  pause_vessels_Info.h  ppause_vessels.moos
src/prelocate/: CMakeLists.txt  main.cpp  prelocate.moos  relocate.cpp  relocate.h  relocate_Info.cpp  relocate_Info.h
src/pvisual/: CMakeLists.txt  main.cpp  pvisual.moos  visual.cpp  visual.h  visual_Info.cpp  visual_Info.h
src/pvisualAgda/: CMakeLists.txt  main.cpp  pvisualAgda.moos  visualAgda.cpp  visualAgda.h  visualAgda_Info.cpp  visualAgda_Info.h
src/pvisualGenios/: CMakeLists.txt  main.cpp  pvisualGenios.moos  visualGenios.cpp  visualGenios.h  visualGenios_Info.cpp  visualGenios_Info.h
(+1 files in other folders)
